gitops/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rps
  template:
    metadata:
      labels:
        app: rps
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: rps-config
          image: 'away168/rps'
          name: rps
          ports:
            - containerPort: 80
