gitops/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rps-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: rps
  type: LoadBalancer
