gitops/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  labels:
    app: rps
  name: '${parameters.dns}-ingress'
spec:
  rules:
    - host: '${parameters.dns}.se.armory.io'
      http:
        paths:
          - backend:
              serviceName: rps
              servicePort: 80
            path: /
  tls:
    - hosts:
        - '${parameters.dns}.se.armory.io'
      secretName: '${parameters.dns}-cert'
